  - support the OLC/DMSt 500km triangle threshold (#2963)
* route planner
  - ignore inactive and acknowledged airspaces (#2866)
* waypoint editor
  - delete waypoint implemented
  - CUP file support added
* devices
  - enabling/disabling devices on-the-fly
  - "debug" button
  - more robust midnight wraparound handling (#2857)
  - new driver from Cambridge L-Nav
* Android
  - support IOIO via OpenAccessory (Android 4.x)
  - support USB host mode and USB-RS232 adapters on the Nook (#2886)
  - show Bluetooth name instead of MAC address in device list
  - enable fast refresh mode on Nook Simple Touch
* Analysis
  - a retrospective task is compiled that summarises waypoints the aircraft has 
    visited (within 15km radius).  These waypoints are drawn on OLC page of analysis dialog.

Version 6.6.4 - 2013/07/11
* map
  - fix stuttering terrain on Windows CE
  - fix multi-touch pan gesture (#2684)
* calculations
  - improve robustness of the zig-zag wind algorithm (#2961)
* devices
  - FLARM: work around a Garrecht TRX-1090 firmware bug (#2745, #2749)
  - LX: faster LXNAV Nano detection over Bluetooth (#2819)
  - Volkslogger: increase timeout to calculate security (#2910)
  - fix bogus error message after pressing "Cancel"
  - show Bluetooth name instead of MAC address in device list

Version 6.6.3 - 2013/07/02
* map
  - fill FAI triangle areas on Windows
* devices
  - FLARM: improve task declaration reliability
  - LX: support Nano firmware 2.10 (#2819)
* Android
  - fix compatibility issue with Android 2.2
  - detect when internal GPS is lost on Android 2.3 and older (#2929)
* user interface
  - fix unit display for pressure in flight setup dialog (#2933)
* data files
  - added "Pilatus B4" polar

Version 6.6.2 - 2013/06/12
* map
  - fix misplaced topography labels (#2564)
  - fix keyboard panning with track up (#2908)
* infoboxes
  - ensure that the unit symbol is visible
  - fix ballast display in vario gauge (#2911)
* tasks