@@ -39,6 +39,7 @@ Version 6.7 - not yet released
   - "debug" button
   - more robust midnight wraparound handling (#2857)
   - new driver from Cambridge L-Nav
+  - support TCP client connection
 * Android
   - support IOIO via OpenAccessory (Android 4.x)
   - support USB host mode and USB-RS232 adapters on the Nook (#2886)
